# Mission_Coordination_Lab-M2_SAAS-Group_02-

./: README.md
catkin_ws/devel/include/evry_project_plugins/: DistanceToFlag.h  DistanceToFlagResponse.h
catkin_ws/devel/lib/pkgconfig/: evry_project_plugins.pc
catkin_ws/devel/share/common-lisp/ros/evry_project_plugins/srv/: DistanceToFlag.lisp  _package.lisp  _package_DistanceToFlag.lisp  evry_project_plugins-srv.asd
catkin_ws/devel/share/evry_project_plugins/cmake/: evry_project_plugins-msg-extras.cmake  evry_project_plugins-msg-paths.cmake  evry_project_pluginsConfig.cmake
catkin_ws/devel/share/evry_project_strategy/cmake/: evry_project_strategyConfig.cmake
catkin_ws/devel/share/roseus/ros/evry_project_plugins/srv/: DistanceToFlag.l
catkin_ws/src/: README.md
catkin_ws/src/evry_project_description/: package.xml
catkin_ws/src/evry_project_plugins/: CMakeLists.txt  package.xml
catkin_ws/src/evry_project_plugins/include/evry_project_plugins/: distance_to_flag_plugin.hpp
catkin_ws/src/evry_project_plugins/src/: distance_to_flag_plugin.cpp
catkin_ws/src/evry_project_strategy/: package.xml
devel/include/evry_project_plugins/: DistanceToFlagRequest.h
devel/lib/pkgconfig/: evry_project_description.pc  evry_project_strategy.pc
devel/lib/python3/dist-packages/evry_project_plugins/srv/: _DistanceToFlag.py  __init__.py
devel/share/evry_project_description/cmake/: evry_project_descriptionConfig.cmake
devel/share/gennodejs/ros/evry_project_plugins/srv/: DistanceToFlag.js  _index.js
devel/share/roseus/ros/evry_project_plugins/: manifest.l
evry_project_plugins/srv/: DistanceToFlag.srv
evry_project_strategy/: CMakeLists.txt
evry_project_strategy/launch/: agent_PID_STG.launch  agent_delay.launch
evry_project_strategy/nodes/: agent_PG.py  agent_PID_STG.py  agent_delay.py
src/Mission_Coordination_project/: LICENSE
src/Mission_Coordination_project/evry_project_description/: CMakeLists.txt
src/Mission_Coordination_project/evry_project_description/launch/: simu_robot.launch
src/Mission_Coordination_project/evry_project_description/urdf/: robot.gazebo
src/Mission_Coordination_project/evry_project_description/worlds/: lev1.world
src/Mission_Coordination_project/evry_project_strategy/launch/: agent_PG.launch  agent_avoidance.launch
src/Mission_Coordination_project/evry_project_strategy/nodes/: agent_avoidance.py
